--- a/src/Home.css
+++ b/src/Home.css
@@ -1,9 +1,10 @@
 .landingScreenImage {
     background-image: url('./assets/landing-page.jpg');
-    height: 80vh;
+    height: 90vh;
     position: relative;
     background-size: cover;
     box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px, rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
+    overflow: hidden;
 }
 
 .margin {
@@ -12,11 +13,11 @@
 
 
 .bannerContainer {
-    transform: rotate(-15deg);
+    transform: rotate(-7deg);
     position: absolute;
-    TOP: 80px;
+    bottom: 20px;
+    right: 12px;;
 }
-
 
 .bannerTop {
     background: navy;
@@ -24,6 +25,8 @@
 
 .bannerBottom {
     background: blue;
+    width: max-content;
+    margin-left: auto !important;
 }
 
 .bannerText {
@@ -46,4 +49,12 @@
     box-sizing: border-box;
     text-align: left;
     padding: 8px 16px;
+}
+
+.card {
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 20px 25px -5px, rgba(0, 0, 0, 0.04) 0px 10px 10px -5px;
+    background-color: #3480eb;
+    color: white;
+    padding: 14px;
+    border-radius: 8px;
 }
