--- a/src/Home.css
+++ b/src/Home.css
@@ -7,10 +7,9 @@
     overflow: hidden;
 }
 
-.margin {
-    margin: 2.5rem;
+.copyright {
+    margin-left: 40px;
 }
-
 
 .bannerContainer {
     transform: rotate(-7deg);
@@ -52,9 +51,20 @@
 }
 
 .card {
-    box-shadow: rgba(0, 0, 0, 0.1) 0px 20px 25px -5px, rgba(0, 0, 0, 0.04) 0px 10px 10px -5px;
     background-color: #3480eb;
     color: white;
-    padding: 14px;
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 20px 25px -5px, rgba(0, 0, 0, 0.04) 0px 10px 10px -5px;
     border-radius: 8px;
+    margin-left: 15%;
+    margin-right: 15%;
+    padding: 14px;
 }
+
+/*
+@media only screen and (max-width: 600px) {
+    .card {
+        margin-right: 32px;
+        margin-left: 32px;
+    }
+}
+*/
