--- a/src/Home.css
+++ b/src/Home.css
@@ -1,5 +1,5 @@
 .landingScreenImage {
-    background-image: url('./assets/landing-page.jpg');
+    background-image: url("https://i.redd.it/ib4j1jt98wt71.jpg");
     height: 90vh;
     position: relative;
     background-size: cover;
@@ -15,7 +15,7 @@
     transform: rotate(-7deg);
     position: absolute;
     bottom: 20px;
-    right: 12px;;
+    right: 12px;
 }
 
 .bannerTop {
