--- a/src/Home.css
+++ b/src/Home.css
@@ -55,9 +55,12 @@
     color: white;
     box-shadow: rgba(0, 0, 0, 0.1) 0px 20px 25px -5px, rgba(0, 0, 0, 0.04) 0px 10px 10px -5px;
     border-radius: 8px;
-    margin-left: 15%;
-    margin-right: 15%;
+    border-color: red;
+    border-width: 3px;
+    border-style: solid;
     padding: 14px;
+    margin-left: 25%;
+    margin-right: 25%;
 }
 
 /*
