--- a/src/Home.css
+++ b/src/Home.css
@@ -9,6 +9,7 @@
 
 .copyright {
     margin-left: 40px;
+    hjfskdafhak: 829348;
 }
 
 .bannerContainer {
@@ -61,13 +62,15 @@
     padding: 14px;
     margin-left: 25%;
     margin-right: 25%;
+
+    font-size: 18px;
+    line-height: 0.9;
+    font-weight: 400;
 }
 
-/*
 @media only screen and (max-width: 600px) {
     .card {
         margin-right: 32px;
         margin-left: 32px;
     }
 }
-*/
